# language-benchmarks

./: .gitignore  benchmark_results.md  create_matrix.py  dbg_benchmark_results.md  language-benchmarks.sln  readme.md  test-dbg.sh  test.sh
cpp/: main.cc
csharp/: Program.cs  csharp.csproj
fsharp/: Program.fs  fsharp.fsproj
go/: main.go
java/: settings.gradle.kts
java/app/: build.gradle.kts
java/app/src/main/java/org/example/: NthPrimeCalculator.java
java/app/src/test/java/org/example/: AppTest.java
python/: main.py
rust/matrix/: Cargo.toml
rust/matrix/src/: main.rs
swift/: matrix.swift
ts/: README.md  bun.lockb  index.ts  package.json
zig/: .gitignore  build.zig
zig/src/: main.zig
